# ReferalBot

./: .env  .env.dev  .env.main  .gitignore  app.py  database.py  docker-compose.yml  image_processor.py  main.py  pyproject.toml  Договор с точкой продаж.docx
.github/workflows/: test-backend.yml  test-frontend.yml  test-miniapp.yml  test-newbot.yml  test.yml
backend/: .env  .gitignore  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: main.ts
backupBot/: config.py  main.py
frontend/: .env  components.json  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
miniApp/: app.py
miniApp/templates/: agent-form.html  index.html  poet-form.html  sales-outlet-form.html  sales-point-form.html  seller-form.html  video-editor-form.html
newBot/: README.md  __init__.py  config.py  db.py  main.py
newBot/files/: agent_contract.docx  poet_contract.docx  video_editor_contract.docx
newBot/handlers/: admin_handlers.py  agent_handlers.py  common_handlers.py  poet_handlers.py  sales_outlet_handlers.py  sales_point_handlers.py  video_editor_handlers.py
newBot/lib/: image_processor.py  user_roles.py  webapp_utils.py
newBot/models/: agent.py  poet.py  sales_point.py  user.py  video_editor.py
newBot/repositories/: agent_repository.py  poet_repository.py  sales_point_repository.py  token_repository.py  user_repository.py  video_editor_repository.py
newBot/services/: agent_service.py  backend_client.py  (+6 more)
static/: script.js  styles.css
templates/: agent-form.html  index.html  sales-point-form.html
(+220 files in other folders)
