[project]
name = "referalbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.0.0b7",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "qrcode>=8.2",
    "uvicorn>=0.34.2",
]
