[project]
name = "referalbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.0.0b7",
    "fastapi>=0.115.12",
    "fpdf2>=2.8.3",
    "jinja2>=3.1.6",
    "keyboard>=0.13.5",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "pyautogui>=0.9.54",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "qrcode>=8.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
